# volatility-strategy

./: README.md  pyproject.toml  run_mlflow.sh
models/GGAL/: GGAL-config.json  GGAL-gru-model.pth  GGAL-scaler.pkl
models/GGAL/5.1/: GGAL-model-v5.1.10.pth  GGAL-model-v5.1.20.pth  GGAL-model-v5.1.30.pth  GGAL-model-v5.1.40.pth  GGAL-model-v5.1.5.pth
models/GGAL/7.3/: GGAL-config-v7.3.json  GGAL-model-v7.3.10.pth  GGAL-model-v7.3.20.pth  GGAL-model-v7.3.30.pth  GGAL-model-v7.3.40.pth  GGAL-model-v7.3.5.pth  GGAL-model-v7.3.50.pth  GGAL-model-v7.3.60.pth  GGAL-scaler-v7.3.pkl
open_byma/: open_byma.py
src/: config.yaml  fin_data.py  fin_dl.py  fin_options.py  fin_volatility.py  model_arch.py  utils.py
src/cli/: README.md  option_pricing.py  run_analysis.py  volatility_comparison_cli.py
src/data/: loader.py  options_loader.py
src/models/: register_model.py  xgboost_model.py  xgboost_trainer.py  xgboost_trainer_ticker.py  xgboost_volatility_infer.py
test/: GARCH-test.ipynb  imp-volatility-test.ipynb
